--- a/Week_1/full-week.html
+++ b/Week_1/full-week.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Do it!</title>
     <link href="styles/shared.css" rel="stylesheet"> <!--공유css가 앞인 이유는 공유스타일 중 일부를 재정의 할 경우 순서가 중요해지기 때문-->
     <link href="styles/site.css" rel="stylesheet">
     
 </head>
 <body>
-    <h1>My upcomming Chanllenge</h1>
+    <h1 id="muc">My upcomming Chanllenge</h1>
     <p id="todays-challenge">view today's challenge</p>
-    <p>AAAAAAAAAAAAA</p>
-    <p>BBBBBBBBB</p>
+    <p class="list1">AAAAAAAAAAAAA</p>
+    <p id="list2">BBBBBBBBB</p>
     <p>CCCCC</p>
 </body>
 </html>
