--- a/Week_2/main.html
+++ b/Week_2/main.html
@@ -10,14 +10,23 @@
     <link href="styles/shared.css" rel="stylesheet" />
     <link href="styles/site.css" rel="stylesheet" />
     <title>My Daily Challenge</title>
-  </head>
-  <body>
+
     <img src="images/challenges-trophy.jpg" alt="A trophy" />
-    <h1>taeyi's challenge for Saturday, September 3rd</h1>
+  </head>
+
+  <main class="main_body">
+    <body>
+      <h1>taeyi's challenge for Saturday, September 3rd</h1>
+      <p>Learn about the basics of web development - specifically dive into HTML & CSS.</p>
+    </body>
+
+  </main>
+
+  <footer>
     <p id="todays-challenge">
       Explore the
       <a href="full-week.html">full-week</a>
     </p>
-    <p>Learn about the basics of web development</p>
-  </body>
+  </footer>
+
 </html>
