--- a/index_style.html
+++ b/index_style.html
@@ -19,7 +19,8 @@
     }
 
     a:hover {
-      text-decoration: underline;
+      text-decoration: none;
+      border: 10px solid rgb(255, 0, 0);
     }
   </style>
   <title>My Daily Challenge</title>
