--- a/Week_2/main.html
+++ b/Week_2/main.html
@@ -7,16 +7,18 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Oswald:wght@700&display=swap"
       rel="stylesheet"
     />
-    <link href="styles/shared.css" rel="stylesheet" />
     <link href="styles/site.css" rel="stylesheet" />
+    <link href="styles/shared.css" rel="stylesheet" />
+    
     <title>My Daily Challenge</title>
 
-    <img src="images/challenges-trophy.jpg" alt="A trophy" />
+    
   </head>
 
-  <main class="main_body">
+  <main>
+    <img src="images/challenges-trophy.jpg" alt="A trophy" />
     <body>
-      <h1>taeyi's challenge for Saturday, September 3rd</h1>
+      <h1>taeyi's challenge for <span> Saturday, September 3rd </span> </h1>
       <p>Learn about the basics of web development - specifically dive into HTML & CSS.</p>
     </body>
 
