--- a/Week_4/index.html
+++ b/Week_4/index.html
@@ -24,8 +24,17 @@
         </nav>
     </header>
     <main>
-        <section></section>
-        <section></section>
+        <section id="hero">
+            <div id="hero-content">
+                <h1>Taeyi's Travel Page</h1>
+                <p>Let's explore the world together!</p>
+                <a href="/place.html">Discover places</a>
+            </div>
+            
+        </section>
+        <section id="highlights">
+
+        </section>
     </main>
     <footer></footer>
 </body>
