--- a/Week_4/places.html
+++ b/Week_4/places.html
@@ -24,7 +24,7 @@
       </nav>
     </header>
     <main>
-        <ul>
+        <ul class="ul1">
             <li>
                 <img src="/images/places/barcelona.jpg" alt="barcelona">
                 <div class="item-content">
@@ -56,6 +56,8 @@
                   </div>
                 </div>
               </li>
+        </ul>
+        <ul class="ul0">
               <li>
                 <img src="images/places/london.jpg" alt="London city" />
                 <div class="item-content">
@@ -75,6 +77,8 @@
                   </div>
                 </div>
               </li>
+        </ul>
+        <ul class="ul2">
               <li>
                 <img src="images/places/miami.jpg" alt="Miami streets" />
                 <div class="item-content">
