--- a/Section10/index.html
+++ b/Section10/index.html
@@ -97,7 +97,8 @@
                     </li>
                 </ul>
             </section>
-            <button>Submit</button>
+            <button type="submit">Submit</button>
+            <button type="reset">Reset</button>
         </form>
         
     </main>
