--- a/Section10_assignment/index.html
+++ b/Section10_assignment/index.html
@@ -25,7 +25,7 @@
                         </li>
                         <li>
                             <label for="yourphone">Your phone Number</label>
-                            <input type="number" name="your-phone" id="yourphone" required>
+                            <input type="tel" name="your-phone" id="yourphone" required minlength="5">
                         </li>
                         <li>
                             <label for="yourmsg">Your Message</label>
@@ -44,23 +44,26 @@
                 <section id="section-radio">
                     <h2>How should we reply?</h2>
                     <ul>
-                        <li>
-                            <input type="radio" name="reply" id="call">
+                        <li class="inline-control">
+                            <input type="radio" name="reply" id="call" value="phone">
                             <label for="call">Call me</label>
                         </li>
-                        <li>
-                            <input type="radio" name="reply" id="email">
+                        <li class="inline-control">
+                            <input type="radio" name="reply" id="email" value="email">
                             <label for="email">Send me an email</label>
                         </li>
-                        <li>
-                            <input type="radio" name="reply" id="dont">
+                        <li class="inline-control">
+                            <input type="radio" name="reply" id="dont" value="dont">
                             <label for="dont">Don't reply</label>
                         </li>
                      </ul>
                 </section>
                 <section>
-                    <input type="checkbox" required>
-                    <label for="">Accept Terms</label>
+                    <li class="inline-control">
+                        <input type="checkbox" required>
+                        <label for="">Accept Terms</label>
+                    </li>
+                    
                 </section>
                 <div>
                     <button id="clear" type="reset">Clear</button>
