--- a/Section12/index.html
+++ b/Section12/index.html
@@ -5,13 +5,15 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Advanced JavaScript</title>
-        <script>src="app.js"</script>
+        <script src="app.js" defer></script>  
+        
     </head>
     <body>
         <h1>Hello</h1>
         <p>
             This is a 
-            <a href="#"></a>
+            <a href= "#" >link</a>
         </p>
+        
     </body>
 </html>
