--- a/Section12/index.html
+++ b/Section12/index.html
@@ -9,7 +9,7 @@
         
     </head>
     <body>
-        <h1>Hello</h1>
+        <h1 id="id2">Hello</h1>
         <p>New</p>
         <p>
             This is a 
