--- a/Section12/index.html
+++ b/Section12/index.html
@@ -5,13 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Advanced JavaScript</title>
-        <script src="app.js" defer></script>  
+        <script src="exercise.js" defer></script>  
         
     </head>
     <body>
         <h1 id="id2">Hello</h1>
         <p>New</p>
-        <p>
+        <p class="highlighted-paragraph">
             This is a 
             <a id="id1" href= "#" >link</a>
         </p>
