--- a/Section14_assignment/index.html
+++ b/Section14_assignment/index.html
@@ -14,22 +14,61 @@
         <p>Built with HTML, CSS, JS, and etc...</p>
     </header>
     <main>
-        <div>
-            <h3>Player1</h2>
-            <h2></h2>
-            <p></p>
-            <p>Edit</p>
-        </div>
-        <div>
-            <h3>Player2</h2>
-            <h2></h2>
-            <p></p>
-            <p>Edit</p>
-        </div>
-        <button>Start New Game</button>
-    </main>
-    <footer>
+        <aside>
+            <h2>Choose your name</h2>
+            <form>
+                <div>
+                    <label for="playername">Player name</label>
+                    <input type="text" name="username" id="playername">
+                </div>
+                <div>
+                    <button type="button">Cancel</button>
+                    <button type="submit">Confirm</button>
+                </div>
+            </form>
+        </aside> <!--페이지에 약간의 보완할 내용이 있거난 상호작용 요소를 가지고 있을 때마다 사용하기 좋은 요소-->
+        <section id="game-configuration">
+            <ol>
+                <li>
+                    <article>
+                        <h2>Player 1</h2>
+                        <h3>PLAYER NAME</h3>
+                        <p>X</p>
+                        <button>Edit</button>
+                    </article>
+                </li>
+                <li>
+                    <article>
+                        <h2>Player 2</h2>
+                        <h3>PLAYER NAME</h3>
+                        <p>O</p>
+                        <button>Edit</button>
+                    </article>
+                </li>
+            </ol>
+            <button>Start New Game</button>
+        </section>
+        <section id="active-game">
+            <article>
+                <h3>You won, <span id="winner-name">PLAYER NAME</span>!</h3>
+                <p>Click "Start New Game"</p>
+            </article>
+            <p>It's your turn <span id="active-player-name">PLAYER NAME</span>!</p>
+            <ol>
+                <li></li>
+                <li></li>
+                <li></li>
 
-    </footer>
+                <li></li>
+                <li></li>
+                <li></li>
+
+                <li></li>
+                <li></li>
+                <li></li>
+            </ol>
+        </section>
+        
+    </main>
 </body>
 </html>
