틱텍토 - JS 파일 추가 / 첫번째 이벤트 리스너 코딩

--- a/Section14_assignment/index.html
+++ b/Section14_assignment/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="styles/configuration.css">
     <link rel="stylesheet" href="styles/game.css">
     <title>Tic Tac Toc</title>
+    <script src="scripts/config.js" defer></script>
+    <script src="scripts/game.js" defer></script>
+    <script src="scripts/app.js" defer></script>
 </head>
 <body>
     <div id="backdrop"></div>
@@ -18,7 +21,7 @@
         <p>Built with HTML, CSS, JS, and etc...</p>
     </header>
     <main>
-        <aside class="modal">
+        <aside class="modal" id="config-overlay">
             <!-- <div class="config-overlay"> -->
                 <h2>Choose your name</h2>
                 <form>
@@ -40,7 +43,7 @@
                         <h2>Player 1</h2>
                         <h3>PLAYER NAME</h3>
                         <p class="player-symbol">X</p>
-                        <button class="btn btn-alt">Edit</button>
+                        <button class="btn btn-alt" id="edit-player-1-btn">Edit</button>
                     </article>
                 </li>
                 <li>
@@ -48,7 +51,7 @@
                         <h2>Player 2</h2>
                         <h3>PLAYER NAME</h3>
                         <p class="player-symbol">O</p>
-                        <button class="btn btn-alt">Edit</button>
+                        <button class="btn btn-alt" id="edit-player-2-btn">Edit</button>
                     </article>
                 </li>
             </ol>
